--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,3 +1,89 @@
+/* .styled-sidebar {
+  position: fixed;
+  height: 100%;
+  width: 250px;
+  z-index: 1;
+  top: 0;
+  background-color: white;
+  overflow-x: hidden;
+  box-shadow: 5px 5px 5px #888;
+}
+
+.apply-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  margin: 20px;
+}
+
+.apply-flex img {
+  width: 30px;
+  cursor: pointer;
+}
+
+.title span {
+  font-size: 1rem;
+  padding: 20px;
+}
+
+.logo-title {
+  color: white;
+  background-color: #1c9cd6;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  border-radius: 0px 0px 40px 30px;
+}
+
+.logo-title h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.logo-title h4 {
+  font-size: 0.7rem;
+  font-weight: bold;
+}
+
+.logout {
+  color: #1c9cd6;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+  position: relative;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  margin-top: 5rem;
+}
+
+.logout img {
+  width: 50px;
+}
+
+.logout h1 {
+  font-size: 1.3rem;
+  padding: 20px;
+}
+
+@media (max-width: 720px) {
+  .styled-sidebar {
+    height: 100%;
+    width: 80px;
+  }
+  .logo-title {
+    border-radius: 0px;
+  }
+  .logo-title img {
+    width: 80px;
+  }
+  .title {
+    display: none;
+  }
+} */
+
 .styled-sidebar {
   position: fixed;
   height: 100%;
@@ -82,4 +168,28 @@
   .title {
     display: none;
   }
+}
+
+.drop-align {
+  margin-left: 5rem;
+}
+
+.drop-align img {
+  width: 30px;
+}
+
+.nav-link {
+  padding: 5px 15px;
+}
+
+/*  class conflicts */
+
+/* .dropdown-toggle::after {
+  display: inline;
+  color: white;
+  margin: 50px;
+} */
+
+.dropdown-menu.show {
+  display: contents;
 }
