--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@
   margin-left: 250px;
   text-align: center;
 }
-.home-main img {
+/* .home-main img {
   width: 50%;
-}
+} */
 
-.headings {
+h1 {
   margin-top: 3rem;
   color: grey;
   text-shadow: grey 1px 0 3px;
