--- a/src/components/course/course.css
+++ b/src/components/course/course.css
@@ -3,7 +3,7 @@
   bottom: 0;
   right: 0;
   width: 75%;
-  background-image: url("../assets/courseBG.png");
+  background-image: url("../../assets/courseBG.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
