updated project subcomponents

--- a/src/components/project/Deploy.module.css
+++ b/src/components/project/Deploy.module.css
@@ -36,10 +36,17 @@
 }
 
 .footImg {
-  width: 60%;
-  float: right;
+  width: 20%;
+  margin-right: 40px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .layout {
   margin-top: 3rem;
+}
+
+.imgFT {
+  margin-right: 20px;
 }
