--- a/src/components/project/Project.module.css
+++ b/src/components/project/Project.module.css
@@ -47,6 +47,12 @@
   float: left;
 }
 
+.align_row__ {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .btn {
   height: 20px;
   width: 10px;
@@ -58,30 +64,22 @@
   width: 70px;
 }
 
-.img {
-  float: left;
+.icons_right {
+  display: flex;
+  flex-direction: row;
 }
-/* 
-.add {
-  float: right;
-}
-
-.add_btn {
-  background-color: rgb(48, 191, 196);
-  border: none;
-  text-align: center;
-  border-radius: 50%;
-} */
 
 .align_row_items {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
+  justify-content: space-around;
 }
 
 .aligncol {
   display: flex;
   flex-direction: column;
+  /* align-items: baseline; */
 }
 
 .shareNDel {
@@ -95,4 +93,16 @@ a {
 a:hover {
   text-decoration: none;
   color: black;
+}
+
+.trash {
+  width: 20px;
+}
+
+.copyImg {
+  width: 35px;
+  background-color: #1c9cd6;
+  border-radius: 50px;
+  padding: 5px;
+  margin: 10px;
 }
