--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,12 +1,29 @@
 .styled-sidebar {
   position: fixed;
   height: 100%;
-  width: 250px; /* Set the width of the sidebar */
+  width: 300px; /* Set the width of the sidebar */
   z-index: 1;
   top: 0;
   background-color: white;
   overflow-x: hidden;
   box-shadow: 5px 5px 5px #888;
+}
+
+.sidebarClose {
+  height: 100%;
+  width: 80px;
+}
+
+.tle {
+  border-radius: 0px;
+}
+
+.tle img {
+  width: 80px;
+}
+
+.t {
+  display: none;
 }
 
 .apply-flex {
